--- a/functions/package.json
+++ b/functions/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "functions",
   "scripts": {
@@ -18,10 +17,12 @@
   "dependencies": {
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^5.0.0",
-    "nodemailer": "^6.9.7"
+    "ics": "^3.7.2",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.14",
+    "@types/ics": "^2.19.3",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
